[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFontData" id=16]
font_path = "res://fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=17]
size = 24
font_data = SubResource( 16 )

[sub_resource type="DynamicFont" id=19]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 18
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BlackOverlay" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="BlackOverlay2" type="ColorRect" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -88.0
margin_right = 150.0
margin_bottom = 88.0
color = Color( 0, 0, 0, 0.352941 )

[node name="controls" type="Button" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.5
margin_top = -72.0
margin_right = 133.5
margin_bottom = -36.0
custom_fonts/font = SubResource( 17 )
text = "Controls"

[node name="Paused" type="Label" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -121.0
margin_right = 50.0
margin_bottom = -91.0
custom_fonts/font = SubResource( 19 )
text = "Paused"

[node name="control_screen" type="Label" parent="Pause"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -75.0
margin_right = 127.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 18 )
text = "Movement: WASD
Sneak/ Walk: Shift
Pause/ Unpause: Esc/ P"

[node name="back_button" type="Button" parent="Pause"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = 59.0
margin_right = 51.0
margin_bottom = 79.0
text = "Back"

[connection signal="pressed" from="Pause/controls" to="Pause" method="_on_controls_pressed"]
[connection signal="pressed" from="Pause/back_button" to="Pause" method="_on_back_button_pressed"]
